tests/ui/did_you_mean/issue-56028-there-is-an-enum-variant.stderr
error[E0425]: cannot find type `Set` in this scope
  --> $DIR/issue-56028-there-is-an-enum-variant.rs:10:15
   |
LL | fn setup() -> Set { Set }
   |               ^^^ not found in this scope
   |
help: there is an enum variant `AffixHeart::Set` and 7 others; try using the variant's enum
   |
LL - fn setup() -> Set { Set }
LL + fn setup() -> AffixHeart { Set }
   |
LL - fn setup() -> Set { Set }
LL + fn setup() -> CauseToBe { Set }
   |
LL - fn setup() -> Set { Set }
LL + fn setup() -> Determine { Set }
   |
LL - fn setup() -> Set { Set }
LL + fn setup() -> PutDown { Set }
   |
   = and 3 other candidates

error[E0425]: cannot find value `Set` in this scope
  --> $DIR/issue-56028-there-is-an-enum-variant.rs:10:21
   |
LL | fn setup() -> Set { Set }
   |                     ^^^ not found in this scope
   |
help: consider importing one of these unit variants
   |
LL + use AffixHeart::Set;
   |
LL + use CauseToBe::Set;
   |
LL + use Determine::Set;
   |
LL + use PutDown::Set;
   |
   = and 3 other candidates

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
